fixed content overflow in mobile version

--- a/src/Styles/Less/App.less
+++ b/src/Styles/Less/App.less
@@ -138,8 +138,6 @@
     p {
       margin-bottom: 5%;
     }
-    @media @phone {
-    }
   }
   .Modelos {
     position: relative;
@@ -337,6 +335,10 @@
   .App-header {
     font-size: calc(5px + 2vmin);
     font-weight: bold;
+  }
+
+  @media @phone {
+    display: block;
   }
 }
 .transparent {
